# aisp-open-core

./: .gitignore  Cargo.toml  README.md  WORKSPACE.md
aisp-formal-verification/: Cargo.toml  trivector_test.aisp
aisp-formal-verification/crates/aisp-cli/src/: main.rs
aisp-formal-verification/crates/aisp-core/: Cargo.toml
aisp-formal-verification/crates/aisp-core/src/: anti_drift.rs  ast.rs  concurrent_behavior_verifier.rs  constraint_solver.rs  enhanced_z3_verification.rs  evidence_parser.rs  formal_semantics.rs  formal_verification.rs  ghost_intent_validation.rs  hebbian_learning.rs  lib.rs  (+18 more)
aisp-formal-verification/docs/adr/: 013-complete-formal-verification-implementation.md  014-tri-vector-signal-validation.md  016-modular-z3-verification-architecture.md  README.md
aisp-rust/: Cargo.toml
aisp-rust-pure/crates/aisp-cli/: Cargo.toml
aisp-rust-pure/crates/aisp-cli/src/: main.rs
aisp-rust-pure/crates/aisp-core/: Cargo.toml
aisp-rust-pure/crates/aisp-core/src/: concurrent_behavior_verifier.rs  conflict_detector.rs  formal_semantics.rs  formal_verification.rs  lib.rs  mathematical_semantics.rs  model_checker.rs  property_types.rs  satisfiability_checker.rs  semantic.rs  semantic_preservation.rs  soundness_proofs.rs  temporal_model_checker.rs  temporal_new.rs  temporal_operator_analyzer.rs  z3_integration.rs
aisp-rust-pure/crates/aisp-core/tests/: formal_specification_validation.rs  property_testing.rs  property_testing_formal.rs  property_testing_semantic.rs
aisp-rust-pure/docs/adr/: 005-z3-native-integration.md
aisp-rust/src/: lib.rs
docs/adrs/: 002-z3-integration-strategy.md
(+26 files in other folders)
