[package]
name = "aisp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true  
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core AISP parsing and validation engine"

[features]
default = ["std", "serde"]
std = []
serde = ["dep:serde"] 
z3-verification = ["dep:z3"]
z3-static = ["z3-verification"]

[dependencies]
serde = { workspace = true, optional = true }
thiserror.workspace = true
z3 = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
proptest.workspace = true